# Sphere-Space-Station-Earth-ONE-and-Beyond

./: -pr-ambel-ethik-sicherheit.md  .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  Evaluation of the Documentation - Sphere Space Station Earth ONE and Beyond.md  LICENSE  README.md  agents.md  book.json  build_report.txt  citation.cff  combined.md  evaluation-of-the-documentation---sphere-space-station-earth-one-and-beyond.md  help.md  license-cc-by-4.0  license-mit  output2.blend  pr-ambel-ethik-sicherheit.md  publish.yml  pyproject.toml  readme.md  requirements.txt  sphere-space-station-earth-one-and-beyond.md  sphere_space_name_candidates.txt  sphere_space_name_candidates_de.csv  📜 Präambel — Ethik & Sicherheit.md
.github/: README.md
dashboard/: qa_status.py  readme.md
documents/: Concept and Feasibility Analysis for the SpaceSphere Project.md  Economic Feasibility and Market Analysis.md  Energy and Thermal Management Systems.md  Environmental and Sustainability Goals.md  Establishing a Solar Alliance for Governance and Security in Space.md  Future Expansion of the Sphere Station Network and Sphere Space Crafts.md  Konstruktionshandbuch.md  Organizational Structure and Consortium Model.md  Public Engagement and Decentralized Associations.md  README.md  Self-Sustainability Models for Space Stations and Spacecraft.md  Sphere Station Documentation Technical and Operational Overview.md  Staffing, Facilities, and Living Spaces.md  Technical Design and System Specifications.md  concept-and-feasibility-analysis-for-the-spacesphere-project.md  construction-handbook.md  (+18 more)
(+470 files in other folders)
