[project]
name = "sphere-station-simulations"
version = "0.1.0"
description = "Simulation tools for the Sphere Space Station project"
authors = [
  {name = "Robert Alexander Massinger", email = "robert@robert-alexander-massinger-space-technologies.com"}
]
readme = "README.md"
license = {file = "LICENSE-MIT"}
requires-python = ">=3.8"

[project.dependencies]
pandas = "*"
numpy = "*"
matplotlib = "*"
tqdm = "*"
pygltflib = "*"

[project.urls]
Homepage = "https://robert-alexander-massinger-space-technologies.com"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
